--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,25 +1,731 @@
-body{
+/* ///////////////////////////////////////////////////////////////////////////////////////////////// */
+/* ///////////////////////////////////////// HOME PAGE ///////////////////////////////////////////// */
+
+
+/* ////////////////////////// BASICS \\\\\\\\\\\\\\\\\\\\\\\\\*/
+
+body,
+html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto';
+    font-weight: bold;
+    overflow-x: hidden;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+button {
+    font-family: 'Roboto';
+    font-weight: bolder;
+    background-color: #86C6B5;
+    color: white;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-radius: 0.5rem;
+    border: none;
+    font-size: 25px;
+    font-weight: bold;
+
+}
+
+li {
+    list-style: none;
+}
+
+h1 {
+    font-family: 'Playfair Display';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 60px;
+    margin: 0;
+}
+
+h2 {
+    font-family: 'Playfair Display';
+    font-style: normal;
+    font-weight: bold;
+}
+
+h3 {
+    font-family: 'Playfair Display';
+    font-style: normal;
+    font-weight: bolder;
+}
+
+span {
+    font-style: italic;
+}
+
+
+/* ////////////////////////// HEADER \\\\\\\\\\\\\\\\\\\\\\\\\*/
+
+
+.menu {
+    display: flex;
+    padding: 0.5% 2%;
+    justify-content: space-between;
+    box-shadow: 2px 2px 8px -6px;
+    height: auto;
+}
+
+.game-button button {
+    font-family: 'Playfair Display';
+    font-size: 15px;
+}
+
+.menu_list {
+    font-family: 'Playfair Display';
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+.menu_list li {
+    margin: 0 10px;
+}
+
+
+
+.cart {
+    height: 2rem;
+    position: relative;
+}
+
+.cart img {
+    height: 100%;
+}
+
+.cart-number-wrapper {
+    position: absolute;
+    top: 0;
+    left: 80%;
+    width: 1rem;
+    height: 1rem;
+
+    background-color: #86C6B5;
+    border-radius: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart-number {
+    font-family: 'Roboto';
+    font-weight: bold;
+    font-size: 10px;
+    color: white;
+}
+
+/* ////////////////////////// LANDING \\\\\\\\\\\\\\\\\\\\\\\\\*/
+
+.landing {
+    height: 90vh;
+    width: 100vw;
+    display: flex;
+}
+
+.left {
+    width: 60%;
+    height: 100%;
+
+    background-color: #86C6B5;
+    background-image: url('/assets/SVG/grid.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.left .title-wrapper {
+    color: white;
+    width: fit-content;
+    margin-top: 5rem;
+    margin-left: 5rem;
+    padding: 2rem;
+    background-color: #86C6B5;
+}
+
+.left .title-wrapper .title span {
+    font-style: italic;
+}
+
+.left .title-wrapper .subtitle {
+    color: white;
+    font-style: italic;
+    font-weight: normal;
+}
+
+.left .landing-button {
+    margin-left: 7rem;
+    margin-top: 12.2rem;
+    padding: 1rem 1rem;
+    background-color: #F7E171;
+    font-family: 'Roboto';
+    font-size: 25px;
+    box-shadow: 0px 4.93023px 4.93023px rgba(0, 0, 0, 0.25);
+}
+
+.left .landing-button a {
+    color: #50776D;
+}
+
+
+.right {
+    position: relative;
+    width: 40%;
+    height: 100%;
+
+    display: flex;
+    justify-content: flex-end;
+}
+
+.right img {
+    position: relative;
+    z-index: 1;
+}
+
+/* ////////////////////////// CONCOURS \\\\\\\\\\\\\\\\\\\\\\\\\*/
+
+
+.concours-landing {
+    position: relative;
+    background-color: #86C6B5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-image: url('/assets/SVG/grid.svg');
+    background-size: 66.8vw;
+}
+
+.concours-wrapper {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: fit-content;
     background-color: white;
+    border-radius: 0.5rem;
+    padding: 3rem 30%;
+    margin: 4rem 0;
 }
 
-table {
-    border-collapse: collapse;
-    width: 70%;
-    margin-top:50px;
+.concours-landing p {
+    margin: 0;
+    font-family: 'Roboto';
+    font-weight: normal;
+    width: fit-content;
 }
 
-th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
+.concours-landing h2 {
+    margin: 0;
+    width: fit-content;
 }
 
-th {
-    background-color: #f2f2f2;
-    color: #333;
+.concours-button {
+    margin-top: 3rem;
+    font-family: 'Playfair Display';
 }
 
-tr{
-    background-color: #f2f2f2;
-    color: #333;
+.concours-button a {
+    color: white;
+    font-size: 25px;
+}
+
+.concours-wrapper-back {
+    position: absolute;
+    background-color: white;
+    border-radius: 0.5rem;
+    padding: 3rem 30%;
+    margin: 4rem 0;
+    z-index: 1;
+    transform: translate(1rem, 1rem);
+    background-color: rgba(255, 255, 255, 0.642);
+    box-shadow: 0px 4px 9px 6px rgba(0, 0, 0, 0.25);
+}
+
+
+/* ////////////////////////// BLOCS JUSTE \\\\\\\\\\\\\\\\\\\\\\\\\*/
+
+.blocs-wrapper {
+    width: 100vw;
+}
+
+.bloc {
+    height: 80vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.bloc .title {
+    font-size: 35px;
+}
+
+.bloc button {
+    box-shadow: 0px 4.93023px 4.93023px rgba(0, 0, 0, 0.25);
+
+    margin-left: 5rem;
+    margin-top: 3rem;
+}
+
+.bloc .title-wrapper {
+    background-color: white;
+
+    padding: 0.5rem;
+    width: fit-content;
+    margin-left: 5rem;
+    margin-top: 10rem;
+}
+
+.bloc .subtitle {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.bloc img {
+    position: absolute;
+    top: 0;
+    left: 96%;
+    transform: translateX(-100%);
+}
+
+
+.bloc-choix {
+    background-image: url('/assets/SVG/gridChoix.svg');
+    background-position: top;
+    background-size: cover;
+
+}
+
+.bloc-conseil {
+    background-color: #DDA1CC;
+
+    background-image: url('/assets/SVG/gridConseil.svg');
+    background-position: top;
+    background-size: cover;
+}
+
+.bloc-conseil img {
+    left: 10rem;
+    top: 100%;
+    transform: translateY(-100%);
+}
+
+.bloc-conseil .title-wrapper {
+    background-color: #DDA1CC;
+    color: white;
+    padding: 0.5rem;
+    width: fit-content;
+    margin-top: 10rem;
+    position: relative;
+    left: 90vw;
+    transform: translateX(-100%);
+}
+
+.bloc-conseil button{
+    position: relative;
+    left: 83vw;
+    transform: translateX(-100%);
+
+    background-color: #F7E171;
+    color: #846079;
+}
+
+.bloc-poids {
+    background-image: url('/assets/SVG/gridPoids.svg');
+    background-position: top;
+    background-size: cover;
+}
+
+.bloc-prix {
+    background-color: #EC875C;
+    background-image: url('/assets/SVG/gridPrix.svg');
+    background-position: top;
+    background-size: cover;
+}
+
+.bloc-prix img {
+    left: 2rem;
+    top: 100%;
+    transform: translateY(-100%);
+}
+
+.bloc-prix .title-wrapper {
+    background-color: #EC875C;
+    color: white;
+    padding: 0.5rem;
+    width: fit-content;
+    margin-top: 10rem;
+    position: relative;
+    left: 90vw;
+    transform: translateX(-100%);
+}
+
+.bloc-prix button{
+    position: relative;
+    left: 83vw;
+    transform: translateX(-100%);
+
+    background-color: #F7E171;
+    color: #8D5137;
+}
+
+
+
+/* ////////////////////////// FOOTER \\\\\\\\\\\\\\\\\\\\\\\\\*/
+
+footer{
+    height: 500px;
+}
+
+.top{
+    height: 90%;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+.top ul{
+    height: fit-content;
+}
+
+.top h4{
+    font-family: 'Playfair Display';
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+.top li{
+    font-size: 14px;
+    font-weight: normal;
+    margin-top: 2.5rem;
+    width: fit-content;
+}
+
+.top .icons{
+    display: flex;
+    padding: 0;
+    width: 150%;
+    justify-content: space-around;
+}
+
+.bottom{
+    height: 10%;
+    background-color: #3b85601d;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+
+}
+
+.bottom h3{
+    font-family: 'Roboto';
+    margin: 0 5rem;
+    font-weight: normal;
+    font-size: 14px;
+}
+
+
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////////// */
+/* /////////////////////////////////////// CONNEXION PAGE //////////////////////////////////////////// */
+
+
+
+.co-p{
+    font-family: 'Roboto';
+    font-size: 18px;
+    font-style: italic;
+    margin-left: 90px;
+}
+
+.co-p a{
+    color: #86C6B5;
+    font-style:normal;
+}
+.fond_connex{
+    margin-top: 286px;
+    width: 100%;
+    position: absolute;
+}
+
+.bloc-connexion{
+    position: absolute;
+    z-index: 1;
+    width: 480px;
+    height: 636px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.13);
+    left: 54%;
+    top: 210px;
+    display: flex;
+    flex-direction: column;
+}
+
+.logo{
+    width: 350px;
+    height: auto;
+    margin-left: 13%;
+    margin-top: 10%;
+    border-bottom: 1px solid #E1E1E1;
+    padding-bottom: 53px;
+}
+
+.connect-form{
+    display: flex;
+    flex-direction: column ;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.connect-form input{
+    /* padding: 7.75px 10.85px; */
+    width: 300px;
+    height: 48px;
+    margin-top: 35px;
+    border: 0.775px solid #D0D5DD;
+    box-shadow: 0px 0.775px 1.55px rgba(16, 24, 40, 0.05);
+    border-radius: 6.2px;
+    font-size: 20px;
+}
+
+.butt_connexion{
+    background-color: #86C6B5;
+    font-size: 25px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 600;
+    color: white;
+    margin-top: 50px;
+}
+
+
+/* ///////////////////////////////////////////////////////////////////////////////////////////////// */
+/* /////////////////////////////////////// PRODUIT PAGE //////////////////////////////////////////// */
+
+
+.fond h1{
+    font-family: 'Playfair Display';
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 900;
+}
+
+.concours-wrapper p, .concours-wrapper-back p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.juste_choix{
+    position: absolute;
+    color: #FFFFFF;
+    margin-left: 954px;
+    margin-top: 104px;;
+    background-color: #86C6B5;
+    width: 330px;
+    height: 109px;
+    padding-left: 50px;
+    padding-top: 10;
+}
+
+.blanc_sous_titre{
+    color: #FFFFFF;
+    font-family: 'Roboto';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 20px;
+}
+.concours-button {
+    font-family: 'Roboto';
+    font-weight: bolder;
+    background-color: #86C6B5;
+    color: white;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-radius: 0.5rem;
+    border: none;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.flex_img{
+    display: flex;
+    flex-direction: column;
+    width: 342px;
+    margin-left: 138px;
+    margin-top: 116px;
+}
+
+.submit-produit{
+    /* padding: 7.75px 10.85px; */
+    width: 221px;
+    height: 50px;
+    margin-top: 35px;
+    border: 0.775px solid #D0D5DD;
+    box-shadow: 0px 0.775px 1.55px rgba(16, 24, 40, 0.05);
+    border-radius: 6.2px;
+    font-size: 20px;
+}
+
+.butt_tech{
+    background-color: white ;
+    font-size: 20px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 600;
+    color: #86C6B5;
+    margin-top: 50px;
+    margin-left: 25px;
+}
+
+.flex_tout{
+    display: flex;
+    flex-direction: row;
+}
+.flex_txt_case{
+    display: flex;
+    flex-direction: column;
+    margin-top: 116px;
+    width: 693px;
+    margin-left: 75px;
+}
+
+.bloc_ajout{
+    position: absolute;
+    width: 693px;
+    height: 200px;
+    left: 590px;
+    top: 752px;
+
+    border: 1px solid #86C6B5;
+    filter: drop-shadow(0px 4px 4px #86C6B5);
+    border-radius: 10px;
+}
+.flex_titre{
+    display: flex;
+    flex-direction: row;
+    margin-left: 10px;
+    
+}
+.prix{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    margin-top: 10px;
+
+color: rgba(0, 0, 0, 0.5);
+}
+
+.position_txt{
+    position: absolute;
+    margin-top: 319px;
+    width: 700px;
+    margin-left:55px;;
+}
+
+.fond{
+    background: #86C6B5 ;
+    width: 100%;
+    height: 600px;
+}
+
+.fond_gri{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+ .z{
+    position: absolute;
+    z-index: 3;
+    margin-top: 154px;
+    margin-left: 105px ;
+ }
+ .z_2{
+    position: absolute;
+    z-index: 3;
+    margin-top: 156px;
+    margin-left: 25% ;
+ }
+
+.concours {
+    position: relative;
+    /* background-color: #86C6B5; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 225px;
+   
+
+    /* background-image: url('/assets/SVG/grid.svg'); */
+    background-size: 66.8vw;
+}
+
+.concours-wrapper {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: fit-content;
+    background-color: white;
+    border-radius: 0.5rem;
+    padding: 3rem 30%;
+    margin: 4rem 0;
+}
+
+.concours p {
+    margin: 0;
+    font-family: 'Roboto';
+    font-weight: normal;
+    width: fit-content;
+}
+
+.concours h2 {
+    margin: 0;
+    width: fit-content;
+}
+
+.concours-button {
+    margin-top: 3rem;
+    font-family: 'Playfair Display';
+}
+
+.concours-button a {
+    color: white;
+    font-size: 25px;
+}
+
+.concours-wrapper-back {
+    position: absolute;
+    background-color: white;
+    border-radius: 0.5rem;
+    padding: 3rem 30%;
+    margin: 4rem 0;
+    z-index: 1;
+    transform: translate(1rem, 1rem);
+    background-color: rgba(255, 255, 255, 0.642);
+    box-shadow: 0px 4px 9px 6px rgba(0, 0, 0, 0.25);
+}
+
+/* //////////////////////////////////////// DO NOT TOUCH //////////////////////////////////////////// */
+/* /////////////////////////////////////// LARAVEL STYLE //////////////////////////////////////////// */
+
+.checkbox{
+    width: auto !important;
+    height: auto !important;
 }
