--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -6,6 +6,7 @@ font-family: 'Courier New', Courier, monospace;
 
 canvas{
     position: absolute;
+    margin:auto;
     top: 0;
     left: 0;
     filter: blur(15px);
@@ -21,6 +22,26 @@ canvas{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.explication_game{
+    margin-left: 41%;
+    color: black;
+    font-weight: 400;
+}
+
+.explication_game h2{
+font-size: 50px;
+}
+
+.button_game{
+    margin-top: 5%;
+    margin-left: 0%;
+    background-color: #EC875C;
+    border: none;
+    color: white;
+    padding: 1% 1%;
+    border-radius: 4px;
 }
 
 .menuWrapper{
