--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -529,7 +529,7 @@ footer{
 .juste_choix{
     position: absolute;
     color: #FFFFFF;
-    margin-left: 954px;
+    margin-left: 50%;
     margin-top: 104px;;
     background-color: #86C6B5;
     width: 330px;
